# simbinary

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: example.ipynb  example.py  example_perturbation.ipynb  example_start.ipynb  example_starting.ipynb
simbinary/: SimBinary.py  __init__.py  fitGaia.py  simBinary.py  simgaia.py
simbinary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simbinary/examples/: example.ipynb  example_pi01Gru.ipynb
